# Mini-Spark

./: .gitignore  Dockerfile.dev  Dockerfile.master  Dockerfile.worker  README.md  docker-compose.yml
docs/input/: A Christmas Carol in Prose; Being a Ghost Story of Christmas.txt  A Doll's House a play.txt  A Modest Proposal.txt  Alice's Adventures in Wonderl.txt  Brothers in arms.txt  Carmilla.txt  Corazon.txt  CorazonDelator.txt  CrimenCastigo.txt  DameTiempoHermando.txt  Early explorers of Plymouth Harbor 1525-1619.txt  Frankenstein.txt  GatoNegro.txt  Grimms' Fairy Tales.txt  Heart of Darkness.txt  Maria.txt  Metamorphosis.txt  Notes from the Underground.txt  Persuasion.txt  Pride and Prejudice.txt  Pygmalion.txt  Romeo and Juliet.txt  The Adventures of Sherlock Homes.txt  The Great Gatsby.txt  The Hound of the Baskervilles.txt  The Importance of Being Earne.txt  The Legend of Sleepy Hollow.txt  The Philippines a Century Hence.txt  The Picture of Dorian Gray.txt  The Prince.txt  The Scarlet Letter.txt  The Souls of Black Folk.txt  The Strange Case of Dr. Jekyl.txt  The War of the Worlds.txt  The Yellow Wallpaper.txt  a.txt  b.txt  catalogo.csv  (+5 more)
scripts/: benchmarks.ps1  build_and_tests.ps1  demo_failover.ps1  demo_spill_memory.ps1  demo_wordcount.ps1  generate_join_dataset.ps1  helpers.ps1  test_4_1_arquitectura.ps1  test_4_3_memoria.ps1  test_5_1_api.ps1  test_joins.ps1  test_operadores.ps1
sparkmini/: Cargo.toml
sparkmini/client/: Cargo.toml
sparkmini/client/src/: cli.rs  main.rs
sparkmini/master/: Cargo.toml
sparkmini/master/src/: failover.rs  handlers.rs  main.rs  monitor.rs  state.rs
sparkmini/worker/: Cargo.toml
sparkmini/worker/src/: main.rs  worker.rs
(+17 files in other folders)
