[package]
name = "master"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }

# Estas las usaremos más adelante para HTTP, logs, etc.
axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["trace"] }
