[package]
name = "worker"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }

# Para hacer requests HTTP y async más adelante
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "time", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
anyhow = "1"
hostname = "0.4"
